add touch output event